# sky-novel-hermes

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: api.ts  main.tsx  styles.css  theme.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/ui/: App.tsx  diff.ts  theme.ts  utils.ts
apps/desktop/src/ui/components/: toast.tsx  ui.tsx
apps/desktop/src/ui/views/: AiUsageView.tsx  DownloadsView.tsx  HomeView.tsx  LibraryView.tsx  PackageView.tsx  PreviewView.tsx  ProofreadsView.tsx  SearchView.tsx  SettingsView.tsx  TranslationsView.tsx
apps/node-service/: package.json  tsconfig.json
apps/node-service/src/: config.ts  downloadManager.ts  index.ts  proofreadManager.ts  translationManager.ts
docs/: THEME.md
scripts/: bump-version.mjs  dev.mjs
