[package]
name = "sky-novel-hermes"
version = "0.1.0"
description = "Novel download management desktop app"
authors = ["Sky Novel Hermes"]
edition = "2021"

[lib]
name = "sky_novel_hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
